# SchoolAssignment

./: .gitignore
1stTerm/Lab10/: magicData.txt
2ndTerm/Algorithm/: Solution1.java  Solution2.java  Solution3.java  Solution4.java  Solution5.java  Solution6.java  Solution7.java  Solution8.java  Solution9.java
2ndTerm/C/: Lab06.c  io.c  io.h  lab01.c  lab02.c  lab03.c  lab04.c  lab05.c  lab07.c  lab08.c  lab09.c  lab10.c  lab11.c  lab12.c  list.c  list.h  record.h  sort.c  sort.h
2ndTerm/Java/A1a/: ArithmeticTable.java
2ndTerm/Java/A1b/: AdditionTable.java  Main.java  MultiplicationTable.java  TableType.java
2ndTerm/Java/A1c/: BadWidthException.java  Diamond.java  Main.java  Rectangle.java  Shape.java  ShapeType.java  Triangle.java
2ndTerm/Java/A1d/: BadWidthException.java  ConsoleDisplayer.java  Diamond.java  Displayer.java  DisplayerFrame.java  Main.java  RTriangle.java  Rectangle.java  Shape.java  ShapeType.java  Square.java  SwingDisplayer.java  Triangle.java
2ndTerm/Java/A2a/: Cell.java  (+9 more)
3rdTerm/c++/abstractfactory/: .gitignore  CMakeLists.txt  enchanted_door.cpp  enchanted_door.hpp  enchanted_maze.cpp  enchanted_maze.hpp  enchanted_maze_factory.hpp  enchanted_room.cpp  enchanted_room.hpp  enchanted_wall.cpp  enchanted_wall.hpp  futuristic_door.cpp  futuristic_door.hpp  futuristic_maze.cpp  futuristic_maze.hpp  futuristic_maze_factory.cpp  futuristic_maze_factory.hpp  futuristic_room.cpp  futuristic_room.hpp  futuristic_wall.cpp  futuristic_wall.hpp  main.cpp  maze.hpp  maze_factory.hpp  maze_game.hpp  room.hpp  wall.hpp
4thTerm/Intranet/: readme.md
(+764 files in other folders)
